<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".category.presentation.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/image_container"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            tools:ignore="ContentDescription" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/online"
        app:layout_constraintBottom_toBottomOf="@+id/image_container"
        app:layout_constraintEnd_toEndOf="@+id/image_container"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_12"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hallo_user"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toEndOf="@id/image_container"
        app:layout_constraintTop_toTopOf="@id/image_container" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_user_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="+1600 "
            android:textColor="@color/yellow"
            android:textSize="@dimen/sp_14"
            app:drawableStartCompat="@drawable/award" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/points"
            android:textColor="@color/yellow"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:src="@drawable/ic_notifications"
        app:layout_constraintBottom_toBottomOf="@+id/image_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_container"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_live_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/live_item" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/rv_live_list">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/upcoming"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/course_of_this_week"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/category_item" />


    <com.github.islamkhsh.CardSliderViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:cardSlider_indicator="@id/indicator"
        app:cardSlider_smallAlphaFactor="3"
        app:cardSlider_otherPagesWidth="30dp"
        app:cardSlider_pageMargin="8dp"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintBottom_toTopOf="@id/indicator"
        app:layout_constraintTop_toBottomOf="@+id/rv_category_list" />

    <com.github.islamkhsh.CardSliderIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:defaultIndicator="@drawable/unselect_line"
        app:indicatorMargin="8dp"
        app:indicatorsToShow="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginStart="16dp"
        app:selectedIndicator="@drawable/selected_line" />

</androidx.constraintlayout.widget.ConstraintLayout>